update number box